--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,41 @@
-albumentations==0.4.3
-opencv-python
-pudb==2019.2
-imageio==2.9.0
-imageio-ffmpeg==0.4.2
-pytorch-lightning==1.4.2
-torchmetrics==0.6
-omegaconf==2.1.1
-test-tube>=0.7.5
+black==23.7.0
+chardet==5.1.0
+clip @ git+https://github.com/openai/CLIP.git
+einops>=0.6.1
+fairscale>=0.4.13
+fire>=0.5.0
+fsspec>=2023.6.0
+invisible-watermark>=0.2.0
+kornia==0.6.9
+matplotlib>=3.7.2
+natsort>=8.4.0
+ninja>=1.11.1
+numpy>=1.24.4
+omegaconf>=2.3.0
+open-clip-torch==2.24
+opencv-python==4.6.0.66
+pandas>=2.0.3
+pillow>=9.5.0
+pudb>=2022.1.3
+pytorch-lightning==2.0.1
+pyyaml>=6.0.1
+scipy>=1.10.1
 streamlit>=0.73.1
-einops==0.3.0
-transformers==4.19.2
-webdataset==0.2.5
-open-clip-torch==2.7.0
-gradio==3.13.2
-kornia==0.6
-invisible-watermark>=0.1.5
-streamlit-drawable-canvas==0.8.0
--e .
+tensorboardx==2.6
+timm>=0.9.2
+tokenizers>=0.14.1
+torch>=2.0.1
+torchaudio>=2.0.2
+torchdata==0.6.1
+torchmetrics>=1.0.1
+torchvision>=0.15.2
+tqdm>=4.65.0
+transformers>=4.36
+triton==2.0.0
+urllib3<1.27,>=1.25.4
+wandb>=0.15.6
+webdataset>=0.2.33
+wheel>=0.41.0
+xformers>=0.0.20
+gradio
+streamlit-keyup==0.2.0
